--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
+    "expo-sqlite": "~14.0.4",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
