--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-swipeable": "^0.6.0"
+    "react-native-svg": "15.2.0",
+    "react-native-swipeable": "^0.6.0",
+    "victory": "^37.0.2",
+    "victory-native": "^41.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
