--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.7.2",
     "expo": "~51.0.21",
+    "expo-av": "~14.0.6",
+    "expo-background-fetch": "~12.0.1",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-secure-store": "~13.0.2",
     "expo-sqlite": "~14.0.5",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "^11.8.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1306.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-sound": "^0.11.2",
     "react-native-svg": "15.2.0",
     "react-native-swipeable": "^0.6.0",
     "victory": "^37.0.2",
