--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-svg": "15.2.0",
     "react-native-swipeable": "^0.6.0",
     "victory": "^37.0.2",
-    "victory-native": "^41.0.2"
+    "victory-native": "^41.0.2",
+    "@react-native-community/slider": "4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
