--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-swipeable": "^0.6.0",
     "victory": "^37.0.2",
     "victory-native": "^41.0.2",
-    "@react-native-community/slider": "4.5.2"
+    "@react-native-community/slider": "4.5.2",
+    "expo-updates": "~0.25.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
